added scripts to all handlebars that need them

--- a/views/editpost.handlebars
+++ b/views/editpost.handlebars
@@ -28,3 +28,7 @@
 </form>
 
 {{> comments post.comments}}
+
+<script src="/public/js/editPost.js"></script>
+<script src="/public/js/deletePost.js"></script>
+<script src="/public/js/comment.js"></script>
