--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -13,3 +13,5 @@
   <div class ="sign-up">
       New here? <a href="/signup">Sign Up now!</a>
   </div>
+
+  <script src="/public/js/login.js"></script>
