--- a/views/newpost.handlebars
+++ b/views/newpost.handlebars
@@ -13,3 +13,5 @@
     <button type="submit" class="btn">Create Post</button>
   </form>
 </section>
+
+<script src="/public/js/addPost.js"></script>
