--- a/views/editpost.handlebars
+++ b/views/editpost.handlebars
@@ -29,6 +29,6 @@
 
 {{> comments post.comments}}
 
-<script src="/public/js/editPost.js"></script>
-<script src="/public/js/deletePost.js"></script>
-<script src="/public/js/comment.js"></script>
+<script src="/js/editPost.js"></script>
+<script src="/js/deletePost.js"></script>
+<script src="/js/comment.js"></script>
