--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -14,4 +14,4 @@
       New here? <a href="/signup">Sign Up now!</a>
   </div>
 
-  <script src="/public/js/login.js"></script>
+  <script src="/js/login.js"></script>
