deleted original heroku app and created another one but that didnt fix anything.  working on css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,4 +5,9 @@ header {
     align-items: center;
     background-color: #003049;
     color: white;
+    text-align: center;
+}
+
+.homepage {
+    color: white;
 }
