--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,7 +21,7 @@
                 <button id="logout" class="btn">Log Out</button>
                 {{else}}
                 <a href="/" class="homepage">Home</a>
-                <a href="/login">Login</a>
+                <a href="/login" class="homepage">Login</a>
                 {{/if}}
             </nav>
         </header>
