--- a/views/partials/posts.handlebars
+++ b/views/partials/posts.handlebars
@@ -1,6 +1,6 @@
-<article class="post">
-    <div class="title">
-        <a href="/post/{{id}}">{{title}}</a>
+<article class="post container">
+    <div class="title card-head">
+        <a href="/post/{{id}}" class="card-head">{{title}}</a>
     </div>
     <div class="body">
         {{post_text}}
