--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,15 +5,25 @@ header {
     align-items: center;
     background-color: #003049;
     color: white;
-    text-align: center;
+    padding: 15px;
+    flex-wrap: wrap;
+    margin: 15px;
 }
 
 .homepage {
     color: white;
 }
 
+.container {
+    width: 300px;
+    border: 3px solid #D62828;
+    padding: 10px;
+    margin: 20px;
+}
+
 .card-head {
     background-color: #f77f00;
     color: white;
     font-family: 'Kanit', sans-serif;
+    margin: auto;
 }
