changed user name to username

--- a/views/partials/posts.handlebars
+++ b/views/partials/posts.handlebars
@@ -6,6 +6,6 @@
         {{post_text}}
     </div>
     <div class="meta">
-        <strong>Posted By {{user.user_name}} on {{format_date created_at}}</strong>
+        <strong>Posted By {{user.username}} on {{format_date created_at}}</strong>
     </div>
 </article>
