--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -9,7 +9,7 @@
        <a href="/post/{{id}}">{{title}}</a>
     </div>
     <div class="meta">
-        <strong>Posted by {{user.user_name}} on {{format_date created_at}}</strong>
+        <strong>Posted by {{user.username}} on {{format_date created_at}}</strong>
     </div>
     </article>
       <a href="/dashboard/edit/{{post.id}}" class="edit-link">Edit</a>
